refacto: transfering ssome files for better configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/public": ["./src/public/*"],
+      "@/voices": ["./src/public/assets/voices/*"]
     }
   },
   "include": [
