--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "next": "14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icon": "^1.0.0",
     "three": "^0.170.0"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.57",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
